test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_char_escape_2.draco
proc main() void : a := '\q'; corp;

