test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_procedure_return_value.draco
proc main() void : a := 1; a corp;

